--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^20.3.2",
     "dotenv": "^16.3.1",
     "prisma": "^4.16.1",
     "tsx": "^3.12.7",
@@ -19,7 +20,9 @@
     "@fastify/cors": "^8.3.0",
     "@fastify/jwt": "^7.1.0",
     "@prisma/client": "^4.16.1",
+    "axios": "^1.4.0",
     "fastify": "^4.18.0",
+    "short-unique-id": "^4.4.4",
     "zod": "^3.21.4"
   }
 }
